--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    
+
     <title>Desenvolvedor Web</title>
 </head>
 <body>
@@ -13,10 +16,10 @@
          </div>
         <nav>
             <ul>
-                <li><a href="#inicio">INÍCIO</a></li>
-                <li><a href="#artigos">ARTIGOS</a></li>
-                <li><a href="#sobre">SOBRE</a></li>
-                <li><a href="#contato">CONTATOS</a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#artigos">Artigos</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contatos</a></li>
             </ul>
         </nav>
         <div class="search-bar">
@@ -25,7 +28,11 @@
         </div>
     </header>
     <main>
-        <h1 class="titulo">Desenvolvedor Web - skills.</h1>
+        <section class="titulo">
+        <h1>Desenvolvedor Web - skills.</h1>
+        <h5>15/01/2025 por Daiane Vilela.</h5>
+        </section>
+
         <section class="conteiner">
 
             <div class="glassmorphism">
